--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav img{
 }
 .text-box p{
   margin: 10px 0 40px;
-  font-size: 14px;
+  font-size: 16px;
   color: #fff;
   
   
@@ -106,6 +106,7 @@ nav .fa{
 @media(max-width: 700px){
   .text-box h1{
     font-size: 20px;
+    text-align: center;
   }
   .nav-links ul li{
     display: block;
@@ -121,6 +122,12 @@ nav .fa{
     z-index: 2;
     transition: 1s;
   
+  }
+  .text-box p{
+    text-align: center;
+    font-size: 13px;
+    line-height: 1.5;
+    text-justify: inter-word;
   }
   nav .fa{
     display: block;
@@ -155,7 +162,7 @@ nav .fa{
   width: auto;
   margin: auto;
   max-width: 1020px;
-  
+
 
 }
 
@@ -433,7 +440,10 @@ hr{
 }
 
 .testimonials-col p {
-  font-size: 1.1rem;
+  text-align: justify;
+  text-justify: inter-word;
+  line-height: 1.5;
+  font-size: 15px;
   margin-bottom: 20px;
 }
 
@@ -503,7 +513,7 @@ hr{
 }
 
 .footer h4 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -511,7 +521,7 @@ hr{
 .footer p {
   max-width: 80%;
   margin: 0 auto;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5;
   margin-bottom: 30px;
   text-align: justify;
@@ -646,11 +656,14 @@ hr{
   text-align: center;
   color: #fff ;
 }
+.sub-header1 h1{
+  padding-top: 100px;
+}
 
 
 
 .interior {
-  padding: 3s0px;
+  padding: 30px;
 }
 
 .heading {
@@ -714,6 +727,9 @@ hr{
   text-align: center;
   color: #fff ;
 }
+.sub-header2 h1{
+  padding-top: 100px;
+}
 
 
 .work1 {
@@ -730,7 +746,8 @@ hr{
 
 .work1 p {
   text-align: justify;
-  font-size: 1.2em;
+  font-size: 14px;
+
   margin-bottom: 30px;
   max-width: 800px;
   margin-left: auto;
@@ -748,16 +765,22 @@ hr{
   width: 100%;
 }
 
-.layer1 {
-  position: absolute;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: #fff;
+
+.layer1 h3{
+  
   width: 100%;
-  height: 50px;
-  padding: 10px;
+  height: 40px;
+  padding: 5px;
   text-align: center;
   font-size: 1.2em;
+  position: absolute;
+  bottom: 0;
+  background: #ccc;  
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin: 0;
+  padding: 0;
 }
 
 .project-description {
@@ -771,7 +794,7 @@ hr{
 }
 
 .project-description p {
-  font-size: 1.1em;
+  font-size: smaller;
   line-height: 1.5;
   text-align: justify;
 }
@@ -802,10 +825,25 @@ hr{
   }
   .work1 p{
     text-align: justify;
+    font-size: 17px;
+    
+    
+    
+
+  }
+  .work1-col img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    
+    
   }
   
   .work1 .project-description p{
+   
     text-align: justify;
+    font-size: 18px;
+    
   }
 
   
@@ -870,43 +908,54 @@ hr{
   text-align: center;
   color: #fff ;
 }
+.sub-header3 h1{
+  padding-top: 100px;
+}
 .location{
   width: 80%;
   margin: auto;
   padding: 80px 0;
-
 }
+
 .location iframe{
   width: 100%;
 }
+
 .contact-us{
   width: 80%;
   margin: auto;
 }
+
 .contact-col{
   flex-basis: 48%;
   margin-bottom: 30px;
 }
+
 .contact-col div{
   display: flex;
   align-items: center;
   margin-bottom: 40px;
 }
+
 .contact-col div .fa{
   font-size: 28px;
   color: #f44336;
   margin: 10px;
   margin-right: 30px;
 }
+
 .contact-col div p{
   padding: 0;
+  margin: 0;
 }
+
 .contact-col div h5{
   font-size: 20px;
   margin-bottom: 5px;
   color: #555;
   font-weight: 400;
 }
+
 .contact-col input, .contact-col textarea{
   width: 100%;
   padding: 15px;
@@ -914,4 +963,28 @@ hr{
   outline: none;
   border: 1px solid #ccc;
   box-sizing: border-box;
+}
+
+.contact-col button[type="submit"] {
+  padding: 15px 25px;
+  font-size: 16px;
+  border: none;
+  background-color: #f44336;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.contact-col button[type="submit"]:hover {
+  background-color: #d63e2a;
+}
+
+.contact-col input:focus, .contact-col textarea:focus{
+  border-color: #f44336;
+}
+
+@media screen and (max-width: 767px){
+  .contact-col{
+    flex-basis: 100%;
+  }
 }
