--- a/style.css
+++ b/style.css
@@ -5,14 +5,31 @@
 
 }
 
-.header{
+
+.header {
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,40,0.7)),url(images/bg.jpg) ;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 40, 0.7)),
+    url(images/Baska\ Left\ Corner\ Night\ Cam-c.jpg);
   background-position: center;
   background-size: cover;
-  position: relative   ;
+  position: relative;
 }
+
+.header a,
+  .header ul li {
+    background-image: inherit;
+    background-position: inherit;
+    background-size: inherit;
+  }
+
+  .header a img {
+    width: 150px; 
+    margin: 0 auto;
+    display: block;
+  }
+
+
 section {
   border-bottom: 1px solid black;
   margin-bottom: 50px; /* Adjust as needed */
@@ -1085,3 +1102,23 @@ hr{
   }
   }
 
+  .custom-btn {
+    display: inline-block;
+    padding: 10px 20px 15px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background: linear-gradient(to bottom, #ff7f50, #ff6347); 
+    border: none; 
+    border-radius: 50px; 
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  }
+  
+  .custom-btn:hover {
+    transform: translateY(-3px); 
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+  }
+  
